Fixed article title on mobile

--- a/css/index/main.css
+++ b/css/index/main.css
@@ -83,7 +83,7 @@ main > .wrapper {
     display: flex;
     padding: 10px;
     gap: 10px;
-    height: 48px;
+    min-height: 48px;
     color: var(--white);
 }
 
